src/github.com/nyaruka/goantlr/gen/excellent_parser.go
// Generated from src/github.com/nyaruka/goantlr/gen/Excellent.g4 by ANTLR 4.7.

package gen // Excellent
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "", "", "", "'.'", "'('", "')'", "'['", "']'", "'-'", "'+'", "'*'",
	"'/'", "','", "'<'", "'>'", "'='", "'!='", "'<='", "'>='", "'\"'", "'^'",
	"'&'",
}
var symbolicNames = []string{
	"", "NUMBER", "TRUE", "FALSE", "PATHSEP", "LPAR", "RPAR", "LBRAC", "RBRAC",
	"SUB", "ADD", "MUL", "DIV", "COMMA", "LT", "GT", "EQ", "NE", "LTE", "GTE",
	"QUOT", "EXP", "AMP", "LITERAL", "Whitespace", "NAME", "ERRROR_CHAR",
}

var ruleNames = []string{
	"parse", "expr", "path", "step", "parameters", "concatenationExpr", "equalityExpr",
	"comparisonExpr", "additionExpr", "multiplicationExpr", "exponentExpr",
	"unaryExpr", "funcCall", "funcPath", "atom",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type ExcellentParser struct {
	*antlr.BaseParser
}

func NewExcellentParser(input antlr.TokenStream) *ExcellentParser {
	this := new(ExcellentParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Excellent.g4"

	return this
}

// ExcellentParser tokens.
const (
	ExcellentParserEOF         = antlr.TokenEOF
	ExcellentParserNUMBER      = 1
	ExcellentParserTRUE        = 2
	ExcellentParserFALSE       = 3
	ExcellentParserPATHSEP     = 4
	ExcellentParserLPAR        = 5
	ExcellentParserRPAR        = 6
	ExcellentParserLBRAC       = 7
	ExcellentParserRBRAC       = 8
	ExcellentParserSUB         = 9
	ExcellentParserADD         = 10
	ExcellentParserMUL         = 11
	ExcellentParserDIV         = 12
	ExcellentParserCOMMA       = 13
	ExcellentParserLT          = 14
	ExcellentParserGT          = 15
	ExcellentParserEQ          = 16
	ExcellentParserNE          = 17
	ExcellentParserLTE         = 18
	ExcellentParserGTE         = 19
	ExcellentParserQUOT        = 20
	ExcellentParserEXP         = 21
	ExcellentParserAMP         = 22
	ExcellentParserLITERAL     = 23
	ExcellentParserWhitespace  = 24
	ExcellentParserNAME        = 25
	ExcellentParserERRROR_CHAR = 26
)

// ExcellentParser rules.
const (
	ExcellentParserRULE_parse              = 0
	ExcellentParserRULE_expr               = 1
	ExcellentParserRULE_path               = 2
	ExcellentParserRULE_step               = 3
	ExcellentParserRULE_parameters         = 4
	ExcellentParserRULE_concatenationExpr  = 5
	ExcellentParserRULE_equalityExpr       = 6
	ExcellentParserRULE_comparisonExpr     = 7
	ExcellentParserRULE_additionExpr       = 8
	ExcellentParserRULE_multiplicationExpr = 9
	ExcellentParserRULE_exponentExpr       = 10
	ExcellentParserRULE_unaryExpr          = 11
	ExcellentParserRULE_funcCall           = 12
	ExcellentParserRULE_funcPath           = 13
	ExcellentParserRULE_atom               = 14
)

// IParseContext is an interface to support dynamic dispatch.
type IParseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsParseContext differentiates from other interfaces.
	IsParseContext()
}

type ParseContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParseContext() *ParseContext {
	var p = new(ParseContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ExcellentParserRULE_parse
	return p
}

func (*ParseContext) IsParseContext() {}

func NewParseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParseContext {
	var p = new(ParseContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ExcellentParserRULE_parse

	return p
}

func (s *ParseContext) GetParser() antlr.Parser { return s.parser }

func (s *ParseContext) Expr() IExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *ParseContext) EOF() antlr.TerminalNode {
	return s.GetToken(ExcellentParserEOF, 0)
}

func (s *ParseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.EnterParse(s)
	}
}

func (s *ParseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.ExitParse(s)
	}
}

func (s *ParseContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExcellentVisitor:
		return t.VisitParse(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ExcellentParser) Parse() (localctx IParseContext) {
	localctx = NewParseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ExcellentParserRULE_parse)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(30)
		p.Expr()
	}
	{
		p.SetState(31)
		p.Match(ExcellentParserEOF)
	}

	return localctx
}

// IExprContext is an interface to support dynamic dispatch.
type IExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsExprContext differentiates from other interfaces.
	IsExprContext()
}

type ExprContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExprContext() *ExprContext {
	var p = new(ExprContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ExcellentParserRULE_expr
	return p
}

func (*ExprContext) IsExprContext() {}

func NewExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExprContext {
	var p = new(ExprContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ExcellentParserRULE_expr

	return p
}

func (s *ExprContext) GetParser() antlr.Parser { return s.parser }

func (s *ExprContext) CopyFrom(ctx *ExprContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *ExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type ExpUnaryContext struct {
	*ExprContext
}

func NewExpUnaryContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ExpUnaryContext {
	var p = new(ExpUnaryContext)

	p.ExprContext = NewEmptyExprContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ExprContext))

	return p
}

func (s *ExpUnaryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpUnaryContext) UnaryExpr() IUnaryExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IUnaryExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IUnaryExprContext)
}

func (s *ExpUnaryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.EnterExpUnary(s)
	}
}

func (s *ExpUnaryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.ExitExpUnary(s)
	}
}

func (s *ExpUnaryContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExcellentVisitor:
		return t.VisitExpUnary(s)

	default:
		return t.VisitChildren(s)
	}
}

type ExpConcatenationContext struct {
	*ExprContext
}

func NewExpConcatenationContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ExpConcatenationContext {
	var p = new(ExpConcatenationContext)

	p.ExprContext = NewEmptyExprContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ExprContext))

	return p
}

func (s *ExpConcatenationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpConcatenationContext) ConcatenationExpr() IConcatenationExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IConcatenationExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IConcatenationExprContext)
}

func (s *ExpConcatenationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.EnterExpConcatenation(s)
	}
}

func (s *ExpConcatenationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.ExitExpConcatenation(s)
	}
}

func (s *ExpConcatenationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExcellentVisitor:
		return t.VisitExpConcatenation(s)

	default:
		return t.VisitChildren(s)
	}
}

type ExpComparisonContext struct {
	*ExprContext
}

func NewExpComparisonContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ExpComparisonContext {
	var p = new(ExpComparisonContext)

	p.ExprContext = NewEmptyExprContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ExprContext))

	return p
}

func (s *ExpComparisonContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpComparisonContext) ComparisonExpr() IComparisonExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IComparisonExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IComparisonExprContext)
}

func (s *ExpComparisonContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.EnterExpComparison(s)
	}
}

func (s *ExpComparisonContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.ExitExpComparison(s)
	}
}

func (s *ExpComparisonContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExcellentVisitor:
		return t.VisitExpComparison(s)

	default:
		return t.VisitChildren(s)
	}
}

type ExpMultiplicationContext struct {
	*ExprContext
}

func NewExpMultiplicationContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ExpMultiplicationContext {
	var p = new(ExpMultiplicationContext)

	p.ExprContext = NewEmptyExprContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ExprContext))

	return p
}

func (s *ExpMultiplicationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpMultiplicationContext) MultiplicationExpr() IMultiplicationExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMultiplicationExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IMultiplicationExprContext)
}

func (s *ExpMultiplicationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.EnterExpMultiplication(s)
	}
}

func (s *ExpMultiplicationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.ExitExpMultiplication(s)
	}
}

func (s *ExpMultiplicationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExcellentVisitor:
		return t.VisitExpMultiplication(s)

	default:
		return t.VisitChildren(s)
	}
}

type ExpAtomContext struct {
	*ExprContext
}

func NewExpAtomContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ExpAtomContext {
	var p = new(ExpAtomContext)

	p.ExprContext = NewEmptyExprContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ExprContext))

	return p
}

func (s *ExpAtomContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpAtomContext) Atom() IAtomContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAtomContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAtomContext)
}

func (s *ExpAtomContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.EnterExpAtom(s)
	}
}

func (s *ExpAtomContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.ExitExpAtom(s)
	}
}

func (s *ExpAtomContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExcellentVisitor:
		return t.VisitExpAtom(s)

	default:
		return t.VisitChildren(s)
	}
}

type ExpEqualityContext struct {
	*ExprContext
}

func NewExpEqualityContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ExpEqualityContext {
	var p = new(ExpEqualityContext)

	p.ExprContext = NewEmptyExprContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ExprContext))

	return p
}

func (s *ExpEqualityContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpEqualityContext) EqualityExpr() IEqualityExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEqualityExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IEqualityExprContext)
}

func (s *ExpEqualityContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.EnterExpEquality(s)
	}
}

func (s *ExpEqualityContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.ExitExpEquality(s)
	}
}

func (s *ExpEqualityContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExcellentVisitor:
		return t.VisitExpEquality(s)

	default:
		return t.VisitChildren(s)
	}
}

type ExpAdditionContext struct {
	*ExprContext
}

func NewExpAdditionContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ExpAdditionContext {
	var p = new(ExpAdditionContext)

	p.ExprContext = NewEmptyExprContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ExprContext))

	return p
}

func (s *ExpAdditionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpAdditionContext) AdditionExpr() IAdditionExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAdditionExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAdditionExprContext)
}

func (s *ExpAdditionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.EnterExpAddition(s)
	}
}

func (s *ExpAdditionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.ExitExpAddition(s)
	}
}

func (s *ExpAdditionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExcellentVisitor:
		return t.VisitExpAddition(s)

	default:
		return t.VisitChildren(s)
	}
}

type ExpExponentContext struct {
	*ExprContext
}

func NewExpExponentContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ExpExponentContext {
	var p = new(ExpExponentContext)

	p.ExprContext = NewEmptyExprContext()
	p.parser = parser
	p.CopyFrom(ctx.(*ExprContext))

	return p
}

func (s *ExpExponentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpExponentContext) ExponentExpr() IExponentExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExponentExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExponentExprContext)
}

func (s *ExpExponentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.EnterExpExponent(s)
	}
}

func (s *ExpExponentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.ExitExpExponent(s)
	}
}

func (s *ExpExponentContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExcellentVisitor:
		return t.VisitExpExponent(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ExcellentParser) Expr() (localctx IExprContext) {
	localctx = NewExprContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ExcellentParserRULE_expr)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(41)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext()) {
	case 1:
		localctx = NewExpAtomContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(33)
			p.Atom()
		}

	case 2:
		localctx = NewExpConcatenationContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(34)
			p.ConcatenationExpr()
		}

	case 3:
		localctx = NewExpEqualityContext(p, localctx)
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(35)
			p.EqualityExpr()
		}

	case 4:
		localctx = NewExpComparisonContext(p, localctx)
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(36)
			p.ComparisonExpr()
		}

	case 5:
		localctx = NewExpAdditionContext(p, localctx)
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(37)
			p.AdditionExpr()
		}

	case 6:
		localctx = NewExpMultiplicationContext(p, localctx)
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(38)
			p.MultiplicationExpr()
		}

	case 7:
		localctx = NewExpExponentContext(p, localctx)
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(39)
			p.ExponentExpr()
		}

	case 8:
		localctx = NewExpUnaryContext(p, localctx)
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(40)
			p.UnaryExpr()
		}

	}

	return localctx
}

// IPathContext is an interface to support dynamic dispatch.
type IPathContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPathContext differentiates from other interfaces.
	IsPathContext()
}

type PathContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPathContext() *PathContext {
	var p = new(PathContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ExcellentParserRULE_path
	return p
}

func (*PathContext) IsPathContext() {}

func NewPathContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PathContext {
	var p = new(PathContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ExcellentParserRULE_path

	return p
}

func (s *PathContext) GetParser() antlr.Parser { return s.parser }

func (s *PathContext) NAME() antlr.TerminalNode {
	return s.GetToken(ExcellentParserNAME, 0)
}

func (s *PathContext) AllStep() []IStepContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IStepContext)(nil)).Elem())
	var tst = make([]IStepContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IStepContext)
		}
	}

	return tst
}

func (s *PathContext) Step(i int) IStepContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStepContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IStepContext)
}

func (s *PathContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PathContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PathContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.EnterPath(s)
	}
}

func (s *PathContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.ExitPath(s)
	}
}

func (s *PathContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExcellentVisitor:
		return t.VisitPath(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ExcellentParser) Path() (localctx IPathContext) {
	localctx = NewPathContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, ExcellentParserRULE_path)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(43)
		p.Match(ExcellentParserNAME)
	}
	p.SetState(47)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == ExcellentParserPATHSEP || _la == ExcellentParserLBRAC {
		{
			p.SetState(44)
			p.Step()
		}

		p.SetState(49)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IStepContext is an interface to support dynamic dispatch.
type IStepContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStepContext differentiates from other interfaces.
	IsStepContext()
}

type StepContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStepContext() *StepContext {
	var p = new(StepContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ExcellentParserRULE_step
	return p
}

func (*StepContext) IsStepContext() {}

func NewStepContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StepContext {
	var p = new(StepContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ExcellentParserRULE_step

	return p
}

func (s *StepContext) GetParser() antlr.Parser { return s.parser }

func (s *StepContext) LBRAC() antlr.TerminalNode {
	return s.GetToken(ExcellentParserLBRAC, 0)
}

func (s *StepContext) Expr() IExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *StepContext) RBRAC() antlr.TerminalNode {
	return s.GetToken(ExcellentParserRBRAC, 0)
}

func (s *StepContext) PATHSEP() antlr.TerminalNode {
	return s.GetToken(ExcellentParserPATHSEP, 0)
}

func (s *StepContext) NAME() antlr.TerminalNode {
	return s.GetToken(ExcellentParserNAME, 0)
}

func (s *StepContext) NUMBER() antlr.TerminalNode {
	return s.GetToken(ExcellentParserNUMBER, 0)
}

func (s *StepContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StepContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StepContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.EnterStep(s)
	}
}

func (s *StepContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ExcellentListener); ok {
		listenerT.ExitStep(s)
	}
}

func (s *StepContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ExcellentVisitor:
		return t.VisitStep(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ExcellentParser) Step() (localctx IStepContext) {
	localctx = NewStepContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, ExcellentParserRULE_step)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(58)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(50)
			p.Match(ExcellentParserLBRAC)
		}
		{
			p.SetState(51)
			p.Expr()
		}
		{
			p.SetState(52)
			p.Match(ExcellentParserRBRAC)
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(54)
			p.Match(ExcellentParserPATHSEP)
		}
		{
			p.SetState(55)
			p.Match(ExcellentParserNAME)
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(56)
			p.Match(ExcellentParserPATHSEP)
		}
		{
			p.SetState(57)
			p.Match(ExcellentParserNUMBER)
		}

	}

	return localctx
}

// IParametersContext is an interface to support dynamic dispatch.
type IParametersContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsParametersContext differentiates from other interfaces.
	IsParametersContext()
}

type ParametersContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParametersContext() *ParametersContext {
	var p = new(ParametersContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ExcellentParserRULE_parameters
	return p
}

func (*ParametersContext) IsParametersContext() {}

func NewParametersContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParametersContext {
	var p = new(ParametersContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ExcellentParserRULE_parameters

	return p
}

func (s *ParametersContext) GetParser() antlr.Parser { return s.parser }

func (s *ParametersContext) CopyFrom(ctx *ParametersContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *ParametersContext) GetRuleContext() antlr.RuleContext {
	return s
}
